--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"fast-html-parser": "^1.0.1",
 		"react": "16.0.0-alpha.12",
+		"react-apollo": "^1.4.2",
 		"react-native": "0.45.1",
 		"react-native-navigation": "^1.1.131",
 		"react-redux": "^5.0.5",
@@ -16,7 +18,9 @@
 		"redux-promise-middleware": "^4.3.0",
 		"redux-saga": "^0.15.4",
 		"redux-thunk": "^2.2.0",
-		"rxjs": "^5.4.1"
+		"rxjs": "^5.4.1",
+		"util": "^0.10.3",
+		"uuid": "^3.1.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
