--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"base-64": "^0.1.0",
 		"fast-html-parser": "^1.0.1",
 		"react": "16.0.0-alpha.12",
 		"react-apollo": "^1.4.2",
