--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react-native": "0.45.1",
 		"react-native-navigation": "^1.1.131",
 		"react-redux": "^5.0.5",
+		"realm": "^1.8.3",
 		"redux": "^3.7.1",
 		"redux-observable": "^0.14.1",
 		"redux-promise-middleware": "^4.3.0",
