--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react": "16.0.0-alpha.12",
 		"react-apollo": "^1.4.2",
 		"react-native": "0.45.1",
+		"react-native-fetch-blob": "^0.10.6",
 		"react-native-navigation": "^1.1.131",
 		"react-native-popup-menu": "^0.8.0",
 		"react-redux": "^5.0.5",
